<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@color/black"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/calculator"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/poppin"
        android:textAlignment="textEnd"
        android:textColor="#673AB7"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppin"
        android:textAlignment="textEnd"
        android:textColor="#673AB7"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculator" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75">
    </androidx.constraintlayout.widget.Guideline>

    <android.widget.Button
        android:id="@+id/clear"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:background="@drawable/shape2"
        android:text="@string/clear"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guide1">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/backspace"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/backspace"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/shape2"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintStart_toStartOf="@id/guide1"
        app:layout_constraintEnd_toStartOf="@id/guide2">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/persen"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/persen"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/shape2"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintStart_toStartOf="@id/guide2"
        app:layout_constraintEnd_toEndOf="@+id/guide3">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/tanda_bagi"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/bagi"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/shape1"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintStart_toStartOf="@id/guide3"
        app:layout_constraintEnd_toEndOf="parent">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/nomor7"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/nomor7"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape3"
        app:layout_constraintTop_toBottomOf="@+id/clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guide1">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/nomor8"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/nomor8"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape3"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/backspace"
        app:layout_constraintStart_toStartOf="@id/guide1"
        app:layout_constraintEnd_toStartOf="@id/guide2">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/nomor9"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/nomor9"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/shape3"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/persen"
        app:layout_constraintStart_toStartOf="@id/guide2"
        app:layout_constraintEnd_toEndOf="@+id/guide3">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/tanda_kali"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/kali"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/shape1"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tanda_bagi"
        app:layout_constraintStart_toStartOf="@id/guide3"
        app:layout_constraintEnd_toEndOf="parent">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/nomor4"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/nomor4"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/shape3"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/nomor7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guide1">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/nomor5"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/nomor5"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/shape3"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/nomor8"
        app:layout_constraintStart_toStartOf="@id/guide1"
        app:layout_constraintEnd_toEndOf="@id/guide2">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/nomor6"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/nomor6"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/shape3"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/nomor9"
        app:layout_constraintStart_toStartOf="@id/guide2"
        app:layout_constraintEnd_toEndOf="@id/guide3">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/tanda_minus"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/minus"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/shape1"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tanda_kali"
        app:layout_constraintStart_toStartOf="@id/guide3"
        app:layout_constraintEnd_toEndOf="parent">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/nomor1"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/nomor1"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/shape3"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/nomor4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guide1">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/nomor2"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/nomor2"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/shape3"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/nomor5"
        app:layout_constraintStart_toStartOf="@id/guide1"
        app:layout_constraintEnd_toEndOf="@id/guide2">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/nomor3"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/nomor3"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/shape3"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/nomor6"
        app:layout_constraintStart_toStartOf="@id/guide2"
        app:layout_constraintEnd_toEndOf="@id/guide3">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/tanda_plus"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/plus"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/shape1"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tanda_minus"
        app:layout_constraintStart_toStartOf="@id/guide3"
        app:layout_constraintEnd_toEndOf="parent">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/nol"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape4"
        android:paddingStart="25dp"
        android:text="@string/nol"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guide2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomor1"></android.widget.Button>

    <android.widget.Button
        android:id="@+id/titik"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/titik"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/shape3"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/nomor3"
        app:layout_constraintStart_toStartOf="@+id/guide2"
        app:layout_constraintEnd_toEndOf="@id/guide3">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/tanda_samaDengan"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/samaDengan"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/shape1"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tanda_plus"
        app:layout_constraintStart_toStartOf="@id/guide3"
        app:layout_constraintEnd_toEndOf="parent">
    </android.widget.Button>

</androidx.constraintlayout.widget.ConstraintLayout>